# 42sh

./: CMakeLists.txt  README  TODO  conftest.py
doc/: 42sh.1  doxyfile
src/: 42sh.c  CMakeLists.txt
src/arithmetic/: CMakeLists.txt  arithmetic.c  arithmetic.h
src/arithmetic/ast_a/: CMakeLists.txt  ast_a.c  ast_a.h
src/arithmetic/eval_a/: CMakeLists.txt  ast_eval_a.c  ast_eval_a.h  ast_print_a.c  rpn_print.c  token_printer.c  token_printer.h
src/arithmetic/lexer_a/: CMakeLists.txt  lexer_a.c  lexer_a.h  lexer_struct.h  token_a.c  token_a.h
src/arithmetic/parser_a/: CMakeLists.txt  parse_add.c  parse_and.c  parse_bitwise_not.c  parse_expo.c  parse_logic_and.c  parse_logic_or.c  parse_mul.c  parse_negative.c  parse_or.c  parse_parenthethis.c  parse_positive.c  parse_unit.c  parse_xor.c  parser_a.c  parser_a.h
src/arithmetic/utils_a/: CMakeLists.txt  xalloc.c  xalloc.h
src/ast/: CMakeLists.txt  ast.h  ast_printer.c  ast_printer.h  dot_printer.c
src/builtins/: CMakeLists.txt  alias.c  builtins.c  builtins.h  cd.c  echo.c  exit.c  export.c  source.c
src/eval/: CMakeLists.txt  eval.c  eval.h  eval_case.c  eval_command.c  eval_for.c  eval_if.c  eval_input.c  eval_operator.c  eval_pipeline.c  eval_simple_command.c  eval_until.c  eval_while.c  redirections.c  redirections.h
src/exec/: CMakeLists.txt  exec.h  exec_pipe.c  exec_simple_command.c
src/expansion/: CMakeLists.txt  command_sub.c  expand_parameter.c  expand_pathname.c  expansion.c  expansion.h  expansion_aux.c  quote_removal.c  word_splitting.c
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  lexer_consume.c  lexer_internals.c  lexer_internals.h  lexer_management.c  lexer_printer.c  lexer_rules.h  lexer_rules_1.c  lexer_rules_2.c  lexer_usage.c  token.c  token.h  token_classification.c
src/options/: CMakeLists.txt  options.c  options.h
src/parser/: CMakeLists.txt  parser.c  parser.h  parser_management.c  rule_and_or.c  rule_case.c  rule_case_clause.c  rule_case_item.c  rule_command.c  rule_compound_list.c  rule_do_group.c  rule_element.c  rule_else_clause.c  rule_for.c  rule_funcdec.c  rule_if.c  rule_input.c  rule_list.c  rule_pipeline.c  rule_prefix.c  rule_redirection.c  rule_shell_command.c  rule_simple_command.c  rule_until.c  rule_while.c
src/shell/: CMakeLists.txt  alias.c  alias.h  shell.c  shell.h  variables.c  variables.h  variables_aux.c
src/utils/: CMakeLists.txt  argv_list.c  argv_list.h  argv_list_aux.c  dynamic_string.c  dynamic_string.h  dynamic_string_aux.c  dynamic_string_internals.h  dynamic_string_utils.c  htab.c  htab.h  htab_basics.c  htab_iterator.c  list.h  list_internals.h  list_iterator.c  list_management.c  list_usage.c  string_utils.c  string_utils.h  string_utils_aux.c
tests/functests/aliases/: aliases.yaml
tests/functests/and_or/: and_or.yaml  trailing_and.sh
tests/functests/break_continue/: break.yaml  continue.yaml
tests/functests/builtins/: alias.yaml  cd.yaml  echo.yaml  exit.yaml  export.yaml  source.yaml  test_source
tests/functests/case/: case.yaml  invalid_case.sh  invalid_case1.sh  valid_case.sh
tests/functests/commands/: command.yaml  invalid_block.sh  multiline_commands.sh
tests/functests/expansion/: arithmetic.yaml  arithmetic_expand.yaml  backtick_cmd_subs.yaml  bracketed_variable.yaml  command_expansion.yaml  expansion.yaml  nested_cmd_expansion.yaml  path_expansion.yaml  quoting.yaml  special.yaml  special_variables.yaml  word_splitting.yaml
tests/functests/for/: for.yaml  for_test1.sh
tests/functests/function/: function.yaml
tests/functests/global/: comments.yaml  global1.yaml  global2.yaml  invalid_global.yaml
tests/functests/if/: if.yaml  invalid_block.sh  invalid_if.sh  multiple_ifs.sh  valid_if.sh
tests/functests/options/: options.yaml
tests/functests/pipe/: pipe.yaml
tests/functests/redirections/: redirections.yaml  test_redirect_1.txt
tests/functests/tildes/: tildes.yaml
tests/functests/until/: until.yaml  until_test1.sh
tests/functests/variables/: variables.yaml
tests/functests/while/: while.yaml
tests/unittests/d_string/: CMakeLists.txt  tests_d_string.c
tests/unittests/lexer/: CMakeLists.txt  tests_lexer.c
tests/unittests/list/: CMakeLists.txt  tests_list.c
tests/unittests/parser/: CMakeLists.txt  tests_parser.c
utils/: check_func.sh  clang-all.sh  convert_ast.sh  rm_trailing_whitespaces.sh  run_pytest.sh
